# qiskit-qulacs

./: .gitignore  .pylintrc  CITATION.bib  CONTRIBUTING.md  INSTALL.md  README.md  ecosystem.json  pyproject.toml  qiskit-qulacs-backend.ipynb  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: docs.yml  test_latest_versions.yml
benchmarks/: benchmark_qulacs_qiskit_estimator.csv  benchmark_qulacs_qiskit_grad.csv  benchmark_qulacs_qiskit_sv_simulation.csv  plot.py  qiskit-qulacs-benchmark.ipynb
benchmarks/cpu/: exec.sh  execall.sh
benchmarks/cpu/qiskit/: benchmarks.py
benchmarks/cpu/qiskit/.benchmarks/Linux-CPython-3.10-64bit/: 0001_data.json
benchmarks/cpu/qiskit/.benchmarks/Linux-CPython-3.8-64bit/: 0001_data.json
benchmarks/cpu/qiskit_qulacs/: benchmarks.py
benchmarks/cpu/qiskit_qulacs/.benchmarks/Linux-CPython-3.10-64bit/: 0001_data.json
benchmarks/cpu/qulacs/: benchmarks.py
benchmarks/cpu/qulacs/.benchmarks/Linux-CPython-3.10-64bit/: 0001_data.json
benchmarks/gpu/qiskit/: benchmarks.py
benchmarks/gpu/qiskit/.benchmarks/Linux-CPython-3.8-64bit/: 0001_data.json
docs/: conf.py  index.rst  project_overview.md  quickstart_guide.md  technical_docs.md
docs/apidocs/: index.rst  modules.rst  qiskit_qulacs.rst
docs/how_tos/: example_how_to.ipynb
docs/intro/: INSTALL.md  beginners_guide.md  project_overview.md  quickstart_guide.md
docs/tutorials/: 01_qulacs_backend.ipynb  02_get_started_primitives.ipynb  03_vqe.ipynb  Variational Quantum Eigensolver (VQE).ipynb  index.rst  variational_quantum_eigensolver.ipynb
qiskit_qulacs/: __init__.py  adapter.py  backend_utils.py  qulacs_backend.py  qulacs_estimator.py  qulacs_estimator_gradient.py  qulacs_job.py  qulacs_provider.py  qulacs_sampler.py  version.py
tests/: test_adapter.py  test_qulacs_backend.py  test_qulacs_estimator.py  test_qulacs_estimator_gradient.py  test_qulacs_provider.py  test_qulacs_sampler.py  utils.py
