# file pyproject.toml

[project]
name = "qiskit_qulacs"
dynamic = [
    "version",
]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
description = "Qiskit Qulacs to execute Qiskit programs using Qulacs as backend."
authors = [
   { name = "Gopal Ramesh Dahale", email = "dahalegopal27@gmail.com"},
]

dependencies = [
    "certifi>=2021.5.30",
    "importlib_metadata>=4.8.1",
    "qiskit-aer>=0.10.3",
    "qiskit-terra>=0.19.2",
]

[project.optional-dependencies]
# Dev dependencies.
dev = [
    "coverage>=5.5",
    "pylint>=2.9.5",
    "nbqa>=1.1.1",
    "treon>=0.1.3",
    "pytest>=6.2.5",
    "pytest-randomly>=1.2.0",
    "mypy>=0.780",
    "mypy-extensions>=0.4.3",
    "jupyter-sphinx>=0.3.2",
    "nbsphinx>=0.8.8",
    "sphinx-autodoc-typehints>=1.17.0",
    "reno>=3.5.0",
    # Black's formatting rules can change between major versions, so we use
    # the ~= specifier for it.
    "black[jupyter]~=22.1",
]

[project.urls]
"Homepage" = "https://github.com/Gopal-Dahale/qiskit-qulacs"
"Bug Tracker" = "https://github.com/Gopal-Dahale/qiskit-qulacs/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "toml",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"
