# file pyproject.toml

[project]
name = "qiskit_qulacs"
dynamic = [
    "version",
]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
description = "Qiskit Qulacs to execute Qiskit programs using Qulacs as backend."
authors = [
   { name = "Gopal Ramesh Dahale", email = "dahalegopal27@gmail.com"},
]
classifiers=[
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "certifi>=2021.5.30",
    "importlib_metadata>=4.8.1",
    "qiskit-aer>=0.12.2",
    "qiskit>=1.0.0",
    "qiskit-algorithms>=0.3.0",
    "qulacs>=0.5.0",
]

[project.optional-dependencies]
# Dev dependencies.
dev = [
    "coverage>=5.5",
    "matplotlib>=3.3",
    "qiskit-nature>=0.7.2",
    "pyscf>=2.5.0",
    "pylatexenc>=1.4",
    "pylint>=2.9.5",
    "nbqa>=1.1.1",
    "treon>=0.1.3",
    "pytest>=6.2.5",
    "pytest-randomly>=1.2.0",
    "mypy>=0.780",
    "mypy-extensions>=0.4.3",
    "jupyter-sphinx>=0.3.2",
    "nbsphinx>=0.8.8",
    "sphinx-autodoc-typehints>=1.17.0",
    "reno>=3.5.0",
    # Black's formatting rules can change between major versions, so we use
    # the ~= specifier for it.
    "black[jupyter]~=22.1",
    "tox==3.24.5",
    "ddt>=1.2.0,!=1.4.0,!=1.4.3",
    "myst_parser>=1.0.0",
    "qiskit-sphinx-theme >=1.14.0"
]

[project.urls]
"Homepage" = "https://github.com/Gopal-Dahale/qiskit-qulacs"
"Bug Tracker" = "https://github.com/Gopal-Dahale/qiskit-qulacs/issues"
"Documentation" = "https://qiskit-qulacs.netlify.app/"
"Repository" = "https://github.com/Gopal-Dahale/qiskit-qulacs"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "toml",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ['qiskit_qulacs*']
exclude = ['qiskit_qulacs*tests']